.happypack/s--2071938561
SyntaxError: Unexpected token (50:53)

  48 |       <div>
  49 |         {users ? <div>...users</div> : null}
> 50 |         {(users && users.length > 0) ? users.map() : }
     |                                                      ^
  51 | 
  52 |         <UserForm />
  53 |       </div>

BabelLoaderError: SyntaxError: Unexpected token (50:53)

  48 |       <div>
  49 |         {users ? <div>...users</div> : null}
> 50 |         {(users && users.length > 0) ? users.map() : }
     |                                                      ^
  51 | 
  52 |         <UserForm />
  53 |       </div>

    at transpile (/Users/kecupochren/Code/demander-frontend/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kecupochren/Code/demander-frontend/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:274:9
    at /Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:330:17
    at Object.callback (/Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/fnOncePedantic.js:10:15)
    at Object.module.exports (/Users/kecupochren/Code/demander-frontend/node_modules/eslint-loader/index.js:182:8)
    at applySyncOrAsync (/Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kecupochren/Code/demander-frontend/node_modules/happypack/lib/applyLoaders.js:268:5)